--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -11,6 +11,8 @@ services:
             options:
                 max-size: 10m
                 max-file: "3"
+        volumes:
+            - postgres-data:/var/lib/postgresql/data 
 
     webserver:
         image: puckel/docker-airflow:1.10.7
@@ -20,6 +22,7 @@ services:
         environment:
             - LOAD_EX=n
             - EXECUTOR=Local
+            - FERNET_KEY=${FERNET_KEY}
         logging:
             options:
                 max-size: 10m
@@ -36,3 +39,6 @@ services:
             interval: 30s
             timeout: 30s
             retries: 3
+
+volumes:
+    postgres-data:
